<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/mini_player_controller"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mini_player_button_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/mini_player_previous"
            android:layout_width="33.0dip"
            android:layout_height="45.0dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/player_prev"
            android:src="@drawable/mini_player_previous" />

        <ImageButton
            android:id="@+id/exo_play"
            android:layout_width="43.0dip"
            android:layout_height="45.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="4.0dip"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_mini_player_play" />

        <ImageButton
            android:id="@+id/exo_pause"
            android:layout_width="43.0dip"
            android:layout_height="45.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="4.0dip"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_mini_player_pause"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/mini_player_next"
            android:layout_width="33.0dip"
            android:layout_height="45.0dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/player_next"
            android:src="@drawable/mini_player_next" />

        <ImageButton
            android:id="@+id/mini_player_list"
            android:layout_width="59.0dip"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/player_list"
            android:paddingLeft="16.0dip"
            android:paddingTop="9.0dip"
            android:paddingRight="16.0dip"
            android:paddingBottom="9.0dip"
            android:src="@drawable/mini_player_playlist" />
    </LinearLayout>
</layout>