<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="music"
            type="com.example.flo.model.response.MusicResponse" />
    </data>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/player_bg">

        <include
            android:id="@+id/main_player_top"
            layout="@layout/layout_main_player_top"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_player_top_height"
            android:layout_alignParentTop="true"
            android:importantForAccessibility="no" />

        <com.google.android.exoplayer2.ui.PlayerControlView
            android:id="@+id/main_player_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:importantForAccessibility="no"
            app:controller_layout_id="@layout/layout_main_player_bottom"
            app:hide_on_touch="false"
            app:show_timeout="0" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/main_player_bottom"
            android:layout_below="@id/main_player_top"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/main_player_margin"
            android:layout_marginRight="@dimen/main_player_margin">

            <ImageView
                android:id="@+id/main_player_more"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:contentDescription="@string/player_more"
                android:src="@drawable/selector_icon_more_player" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_weight="20.0" />

                <LinearLayout
                    android:id="@+id/main_player_trackSongInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="31.0dip"
                    android:layout_marginRight="31.0dip"
                    android:layout_marginBottom="21.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/main_player_title"
                        android:text="@{music.title}"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:fontFamily="@font/sans_medium"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/text_color_06"
                        android:textSize="19.0dip"
                        tools:ignore="EllipsizeMaxLines">

                        <requestFocus
                            android:duplicateParentState="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />
                    </TextView>

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6.0dip"
                        android:shrinkColumns="0">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/main_player_singer"
                                android:text="@{music.singer}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/sans_medium"
                                android:gravity="center"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/text_color_06"
                                android:textSize="16.0dip" />

                            <ImageView
                                android:layout_width="14.0dip"
                                android:layout_height="14.0dip"
                                android:src="@drawable/icon_sub_arrow" />
                        </TableRow>
                    </TableLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_weight="120.0">

                    <ImageView
                        android:id="@+id/album_standard"
                        android:layout_width="0.0dip"
                        android:layout_height="0.0dip"
                        android:padding="5.0dip"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:imageUrl="@{music.image}"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/main_player_lyricsLayer"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:layout_marginTop="12.0dip"
                    android:clickable="true"
                    android:focusable="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mainplayer_lyrics"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:overScrollMode="never"
                        android:scrollbars="vertical" />

                    <TextView
                        android:id="@+id/main_player_lyrics_click"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal"
                        android:text="@string/player_lyric"
                        android:textColor="@color/text_color_08"
                        android:textSize="15.0dip" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12.0dip"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/main_player_like"
                        android:layout_width="30.0dip"
                        android:layout_height="30.0dip"
                        android:layout_gravity="center"
                        android:background="@drawable/selector_icon_player_like"
                        android:contentDescription="@string/player_like" />

                    <Button
                        android:id="@+id/main_player_dislike"
                        android:layout_width="25.0dip"
                        android:layout_height="25.0dip"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30.0dip"
                        android:background="@drawable/icon_not_interested"
                        android:backgroundTint="@drawable/selector_icon_player_dislike"
                        android:contentDescription="@string/player_dislike" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_weight="15.0" />
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_seekbar_gradient"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/seek_bar_moving_text_background"
            android:layout_above="@id/main_player_bottom"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_moving_time"
            style="@style/SeekbarMovingTime"
            android:layout_above="@id/main_player_bottom"
            android:layout_marginBottom="@dimen/seek_bar_moving_text_bottom"
            android:visibility="gone" />

    </RelativeLayout>
</layout>